--- a/App/Qwadmin/View/Order/form.html
+++ b/App/Qwadmin/View/Order/form.html
@@ -30,12 +30,12 @@
                             <div class="space-4"></div>
                             <div class="form-group">
                                 <label class="col-sm-1 control-label no-padding-right" for="form-field-1">
-                                    商品标题 </label>
+                                    拍卖商品名称 </label>
                                 <div class="col-sm-9">
-                                    <input type="text" name="name" id="title" placeholder="商品标题"
-                                           class="col-xs-10 col-sm-5" value="{$auction_info['shop_name']}">
+                                    <input type="text"
+                                       disabled="disabled"    class="col-xs-10 col-sm-5" value="{$logistics['shop_name']}">
                                     <span class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">文章标题不能为空。</span>
+												<span class="middle"><不可修改></不可修改></span>
 											</span>
                                 </div>
                             </div>
@@ -43,206 +43,66 @@
 
                             <div class="form-group">
                                 <label class="col-sm-1 control-label no-padding-right" for="form-field-0">
-                                    场次选择 </label>
+                                    订单状态 </label>
                                 <div class="col-sm-9">
-                                    <select name="session_id" class="col-xs-10 col-sm-5" >
-                                        <option value="">场次选择下拉框</option>
-                                        <volist name="sessions"  id="session">
+                                    <select name="status" class="col-xs-10 col-sm-5" >
 
-                                            <option value="{$session['id']}" <if condition="$auction_info['session_id'] eq $session['id']">selected</if> >{$session['name']}--{$session['time']|date="Y-m-d H:i:s",###}</option>
-                                        </volist>
-                                    </select>
-
-                                    <span class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">选择商品状态。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-4">
-                                    缩略图 </label>
-                                <div class="col-sm-9">
-                                    <div class="col-xs-10 col-sm-5">
-                                        {:UpImage("thumbnail",100,100,$auction_info['thumbnail'])}
-                                    </div>
-                                    <span class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">仅支持jpg、gif、png、bmp、jpeg，且小于1MB。</span>
-											</span>
-                                </div>
-
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-4">
-                                    轮播图 </label>
-                                <div class="col-sm-9">
-                                    <div class="col-xs-10 col-sm-5">
-                                        {:UpImage("carousel_figure1",100,100,$auction_info['carousel_figure1'])}
-                                        {:UpImage("carousel_figure2",100,100,$auction_info['carousel_figure2'])}
-                                        {:UpImage("carousel_figure3",100,100,$auction_info['carousel_figure3'])}
-                                    </div>
-                                    <span class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">仅支持jpg、gif、png、bmp、jpeg，且小于1MB。</span>
-											</span>
-                                </div>
-
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-1">
-                                    起拍价 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="start_price" id="seotitle" placeholder="起拍价"
-                                           class="col-xs-10 col-sm-5" value="{$auction_info['start_price']}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">如果设置SEO标题，将会在IE标题栏显示SEO标题。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="space-4"></div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    加拍幅度 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="additional_shot_range"  placeholder="关键词"
-                                           class="col-xs-10 col-sm-5" value="{$auction_info['additional_shot_range']}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">文章关键词。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="space-4"></div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    参考价 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="reference_price"  placeholder="参考价"
-                                           class="col-xs-10 col-sm-5" value="{$auction_info['reference_price']}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">参考价。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    最高成交价 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="high_price"  placeholder="最高成交价"
-                                           class="col-xs-10 col-sm-5" value="{$auction_info['high_price']}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">最高成交价。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    保证金 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="guaranty"  placeholder="保证金"
-                                           class="col-xs-10 col-sm-5" value="{$auction_info['guaranty']}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">保证金。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    开拍时间 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="start_time"  placeholder="开拍时间"
-                                           onfocus="WdatePicker({dateFmt:'yyyy-M-d HH:mm'})"     class="col-xs-10 col-sm-5" value="{$auction_info['start_time']|date='Y-m-d H:i:s',###}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">保证金。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    结束时间 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="end_time"  placeholder="结束时间"
-                                           onfocus="WdatePicker({dateFmt:'yyyy-M-d HH:mm'})"      class="col-xs-10 col-sm-5" value="{$auction_info['end_time']|date='Y-m-d H:i:s',###}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">保证金。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    成交人</label>
-                                <div class="col-sm-9">
-                                    {$success_man}
-                                </div>
-
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    参拍人</label>
-
-                                <div class="col-sm-9">
-                                    {$particiment}
-                                </div>
-
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    保证金 </label>
-                                <div class="col-sm-9">
-                                    <input type="text" name="guaranty"  placeholder="保证金"
-                                           class="col-xs-10 col-sm-5" value="{$auction_info['guaranty']}">
-                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">保证金。</span>
-											</span>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-0">
-                                    状态 </label>
-                                <div class="col-sm-9">
-                                    <select  name="status" class="col-xs-10 col-sm-5" disabled="disabled">
-                                        <option value="0" <if condition="$auction_info['status'] eq 0">selected="selected"</if> >未开拍</option>
-                                        <option value="1" <if condition="$auction_info['status'] eq 1">selected="selected"</if> >参拍中</option>
-                                        <option value="2" <if condition="$auction_info['status'] eq 2">selected="selected"</if>>已拍出</option>
-                                        <option value="3" <if condition="$auction_info['status'] eq 3">selected="selected"</if>>流拍</option>
+     <option value="1" <if condition="$logistics['status'] eq 1">selected</if> >待付款</option>
+     <option value="2" <if condition="$logistics['status'] eq 2">selected</if> >待发货</option>
+     <option value="3" <if condition="$logistics['status'] eq 3">selected</if> >已发货</option>
+     <option value="4" <if condition="$logistics['status'] eq 4">selected</if> >已收货</option>
 
                                     </select>
 
                                     <span class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">选择拍卖商品状态。</span>
+												<span class="middle">选择订单状态。</span>
 											</span>
                                 </div>
                             </div>
 
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label no-padding-right" for="form-field-0">
-                                    商品简介 </label>
-                                <div class="col-sm-9">
-                                    <textarea name="short_show" style="height:154px;width: 377px;">{$auction_info['short_show']}</textarea>
-                                </div>
-                            </div>
+
 
 
                             <div class="form-group">
                                 <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
-                                    商品详情内容 </label>
+                                    订单金额 </label>
                                 <div class="col-sm-9">
-                                        <textarea name="detail" id="detail"
-                                                  style="width:100%;height:400px;visibility:hidden;">{$auction_info['detail']}</textarea>
+                                    <input disabled="disabled" type="text"
+                                           class="col-xs-10 col-sm-5" value="{$logistics['shop_price']}">
+                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
+												<span class="middle">订单金额</span>
+											</span>
                                 </div>
                             </div>
-                            <div class="space-4"></div>
 
+
+
+
+                            <div class="space-4"></div>
+                            <div class="form-group">
+                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
+                                物流编号</label>
+                                <div class="col-sm-9">
+                                    <input  type="text" name="logistics_number"
+                                           class="col-xs-10 col-sm-5" value="{$logistics.logistics_number}">
+                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
+												<span class="middle">保证金。</span>
+											</span>
+                                </div>
+                            </div>
+
+                            <div class="space-4"></div>
+                            <div class="form-group">
+                                <label class="col-sm-1 control-label no-padding-right" for="form-field-2">
+                                    物流公司名</label>
+                                <div class="col-sm-9">
+                                    <input  type="text" name="logistics"
+                                            class="col-xs-10 col-sm-5" value="{$logistics['logistics']}">
+                                    <span style="display: none" class="help-inline col-xs-12 col-sm-7">
+												<span class="middle">保证金。</span>
+											</span>
+                                </div>
+                            </div>
                             <input type="hidden" value="{$id}" name="aid">
                             <div class="col-md-offset-2 col-md-9">
                                 <button class="btn btn-info submit" type="button">
