--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -73,7 +73,7 @@
 
 <div class="header">
     <a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/index/image/back1.png" class="h-img1"></a>
-    首页	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/index/image/help.png" class="h-img"></a>
+    首页	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/index/image/help.png" class="h-img"></a>
 </div>
 <div id="wrap">
     <div class="hiSlider-wrap" ><ul class="hiSlider hiSlider3" >
