--- a/App/Home/View/Order/orders.html
+++ b/App/Home/View/Order/orders.html
@@ -20,7 +20,7 @@
 </script>
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/order/back1.png" class="h-img1"></a>
-	  我的订单	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/order/help.png" class="h-img"></a>
+	  我的订单	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/order/help.png" class="h-img"></a>
 </div>
 <style type="text/css">
     .pagination{
