--- a/App/Home/View/User/setup.html
+++ b/App/Home/View/User/setup.html
@@ -22,7 +22,7 @@
 
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/setup/back1.png" class="h-img1"></a>
-	  设置	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/setup/help.png" class="h-img"></a>
+	  设置	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/setup/help.png" class="h-img"></a>
 </div>
 
 <ul class="s-ul1">
