--- a/App/Home/View/jifen/address.html
+++ b/App/Home/View/jifen/address.html
@@ -18,7 +18,7 @@
 </script>
 <div class="header">
     <a href={:U('integral/money',array('id'=>$id))}><img src="__PUBLIC__/huser/address/back1.png" class="h-img1"></a>
-    地址列表	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/address/help.png" class="h-img"></a>
+    地址列表	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/address/help.png" class="h-img"></a>
 </div>
 
 <ul class="ad-ul1">
