--- a/App/Home/View/jifen/money.html
+++ b/App/Home/View/jifen/money.html
@@ -20,7 +20,7 @@
 </script>
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/money/back1.png" class="h-img1"></a>
-	  兑换商品	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/money/help.png" class="h-img"></a>
+	  兑换商品	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/money/help.png" class="h-img"></a>
 </div>
 <form >
                 <a href={:U('integral/address',array('id'=>$data['id']))}>
