--- a/App/Home/View/jifen/xiang.html
+++ b/App/Home/View/jifen/xiang.html
@@ -26,7 +26,7 @@
 </script>
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/xiang/back1.png" class="h-img1"></a>
-	  商品详情	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/xiang/help.png" class="h-img"></a>
+	  商品详情	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/xiang/help.png" class="h-img"></a>
 </div>
 <img src={$data['thumbnail']} class="pd-img1 fl">
 <div class="clearfix">
