--- a/App/Home/View/pai/index.html
+++ b/App/Home/View/pai/index.html
@@ -43,7 +43,7 @@
 
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/pai/back1.png" class="h-img1"></a>
-	  参拍记录	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/pai/help.png" class="h-img"></a>
+	  参拍记录	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/pai/help.png" class="h-img"></a>
 </div>
 
 
