--- a/App/Home/View/personal/addaddress.html
+++ b/App/Home/View/personal/addaddress.html
@@ -18,7 +18,7 @@
 </script>
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/addaddress/back1.png" class="h-img1"></a>
-	  添加地址	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/addaddress/help.png" class="h-img"></a>
+	  添加地址	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/addaddress/help.png" class="h-img"></a>
 </div>
 <form>
 <ul class="s-ul1">
