--- a/App/Home/View/personal/jifen.html
+++ b/App/Home/View/personal/jifen.html
@@ -21,7 +21,7 @@
 
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/jifen/back1.png" class="h-img1"></a>
-	  积分商城	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/jifen/help.png" class="h-img"></a>
+	  积分商城	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/jifen/help.png" class="h-img"></a>
 </div>
 <div class="im-div1">
     <span class="im-span1">我的积分:</span>
