--- a/App/Home/View/PartAuc/show.html
+++ b/App/Home/View/PartAuc/show.html
@@ -43,7 +43,7 @@
 
 <div class="header">
     <a onclick="javascript:history.back(-1);"><img src="./part_auc_files/back1.png" class="h-img1"></a>
-    参拍记录	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="./part_auc_files/help.png" class="h-img"></a>
+    参拍记录	<a href={:U('index/articles',array('id'=>1))}><img src="./part_auc_files/help.png" class="h-img"></a>
 </div>
 
 
