--- a/App/Home/View/RecentDeal/showRecent.html
+++ b/App/Home/View/RecentDeal/showRecent.html
@@ -33,7 +33,7 @@
 
 <div class="header">
     <a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/recentdeal/back1.png" class="h-img1"></a>
-    最新成交	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/recentdeal/help.png" class="h-img"></a>
+    最新成交	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/recentdeal/help.png" class="h-img"></a>
 </div>
 
 <div class="id-div1">
