--- a/App/Home/View/personal/editaddress.html
+++ b/App/Home/View/personal/editaddress.html
@@ -19,7 +19,7 @@
 
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/editaddress/back1.png" class="h-img1"></a>
-	  修改地址	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/editaddress/help.png" class="h-img"></a>
+	  修改地址	<a href={:U('index/articles',array('id'=>1))}><img src="__PUBLIC__/huser/editaddress/help.png" class="h-img"></a>
 </div>
 <form>
     <ul class="s-ul1">
